--- a/aulas/paginamult_css.html
+++ b/aulas/paginamult_css.html
@@ -11,7 +11,7 @@
     <h1> Teclado Multimídia </h1>
     <p>
         Este tipo de teclado facilita ações através de teclas adicionais de atalho, que permitem que o usuário 
-        manipule programas sem precisar sair da aplicação onde se encontra. Por exemplo, o usuário pode passar de 
+        manipule programas  leila wilde  sem precisar sair da aplicação onde se encontra. Por exemplo, o usuário pode passar de 
         uma faixa para outra (de vídeo ou música) sem precisar abrir o programa que a está reproduzindo.
     </p>
     <img src="/imagens/teclado_multimidia.png"> 
