--- a/index.html
+++ b/index.html
@@ -1,50 +1,92 @@
 <!DOCTYPE html>
-<html lang="pr-br">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
-    <title> CSS </title>
-    <link rel="stylesheet" href="./style.css"> </link>
+    <title>Receita</title>
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div>
-        <h1> Teclados </h1>
-        <p>
-            Na computação, o teclado de computador é um dispositivo que possui uma série de botões ou teclas,
-            utilizado para inserir dados no computador. É um tipo de periférico de entrada utilizado pelo usuário
-            para a entrada manual no sistema de dados e comandos. Possui teclas representando letras, números,
-            símbolos e outras funções, baseado no modelo de teclado das antigas máquinas de escrever.
-        </p>
-        <p>
-            Normalmente tem caracteres gravados ou impressos sobre cada botão, correspondente a um único símbolo
-            escrito. No entanto, para produzir alguns símbolos no computador, é necessário utilizar mais de uma
-            tecla simultaneamente.
-        </p>
-        <p>
-            Os teclados de computadores mais comuns são projetados para a escrita de textos e inserção de comandos
-            de sistema. Juntamente ao rato (mouse), é uma das principais interfaces entre o computador e o
-            utilizador.
-        </p>
+    <div class="top-bar">
+        <img src="/imagens/logo_tudogostoso.png" alt="logo tudo gostoso">
     </div>
 
-    <div>
-        <h2> Arranjo das teclas </h2>
-        <p>
-            O número de teclas em um teclado padrão varia de 101 a 104 teclas, entretanto, considerando-se teclas
-            de atalho e outros recursos, é comum encontrar teclados de até 130 teclas. Também há variantes compactas
-            com menos de 90 teclas, geralmente encontradas em laptops e em computadores de mesa compactos.
-        </p>
+    <div class="hero">
     </div>
 
-    <div>
-        <h2> Principais tipos de teclado </h2>
-        <ul>
-            <li> <a href="./aulas/paginaescri-cssinline.html"> De escritório </a> </li>
-            <li> <a href="./aulas/paginamult_cssinline.html"> Multimídia </a></li>
-            <li> <a href="./aulas/paginagame-cssinline.html"> Gamer </a> </li>
-        </ul>
+    <div class="conteudo">
+        <div>
+            <h1>Bolo de Fubá com Goiabada</h1>
+        </div>
+        <div class="ingredientes">
+            <h2> Ingredientes </h2>
+            <a href="">
+                <ul>
+                    <li>1 ovo</li>
+                    <li>1 copo (americano) de leite</li>
+                    <li>1 copo (americano) de fubá</li>
+                    <li>1 copo (americano) de açúcar</li>
+                    <li>1/2 copo (americano) de óleo</li>
+                    <li>1 copo (americano) farinha de trigo</li>
+                    <li>1 colhuer de fermento em pó</li>
+                    <li>goiabada em pedaços</li>
+                    <li>erva-doce a gosto</li>
+                    <a class="butao" href="#">Comprar ingredientes</a>
+                </ul>
+            </a>
+        </div>
+
+        <div class="modo">
+            <h2>Modo de preparo</h2>
+            <a href="">
+                <ol>
+                    <li>Misture no liquidificador o ovo, o leite, o óleo, o açúcar, o fubá e bata bem.</li>
+                    <li>Despeje a mistura em uma tigela, e misture com a farinha e o fermento em pó.</li>
+                    <li>
+                        Despeje a massa em uma forma untada com manteiga e farinha, e acrescente uma
+                        camada de goiabada. Repita este processo até preencher toda a forma.
+                    </li>
+                    <li>Leve ao forno médio (180° C), preaquecido, por 40 minutos.</li>
+                </ol>
+            </a>
+        </div>
+
+        <div class="instrucoes">
+            <h2>Instruções Adicionais</h2>
+            <p>
+                Essa receita de bolo de fubá com goiabada é uma delícia, não é mesmo? Quem não gosta de um
+                delicioso bolo de fubá quentinho saindo do forno? Essa receita é uma ótima opção para
+                servir à tarde com uma boa xícara de café! E se você também é fã dessa delícia, venha
+                descobrir 65 receitas de bolo de fubá incríveis! Escolha a sua preferida e delicie-se
+            </p>
+            <p>
+                O fubá é uma farinha de milho composta por grãos médios; ele absorve mais água do que a
+                farina de milho flocada, por exemplo, pois tem flocos mais finos. Agora que você sabe
+                como fazer bolo de fubá com goiabada, que tal aprender também a fazer angu, cremes,
+                biscoitos, broas e outras delícias. Tem fubá aí na sua despensa e quer algumas ideias?
+                Confira com a gente 30 deliciosas receitas com fubá!
+            </p>
+            <p>
+                O fubá é uma farinha de milho composta por grãos médios; ele absorve mais água do que a
+                farina de milho flocada, por exemplo, pois tem flocos mais finos. Agora que você sabe
+                como fazer bolo de fubá com goiabada, que tal aprender também a fazer angu, cremes,
+                biscoitos, broas e outras delícias. Tem fubá aí na sua despensa e quer algumas ideias?
+                Confira com a gente 30 deliciosas receitas com fubá!
+            </p>
+            <p>
+                Procurando mais receitas de bolos caseiros deliciosos? Confira no TudoGostoso como
+                fazer bolo de milho cremoso, bolo simples, bolo de mandioca, bolo fofo de chocolate,
+                bolo de cenoura e muitas outras receitas fáceis de fazer!
+            </p>
+        </div>
+    </div>
+    <div class="footer">
+        Encontrou algum problema com esta receita? Por favor entre em contato através do e-mail
+        <a href="mailto: info@tudogostoso.com.br"> info@tudogostoso.com.br</a>
     </div>
 
-<body>
-</html> 
+</body>
+
+</html>
